[package]
name = "googleam"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.14", features = ["web_sys"] }
wasm-bindgen = "0.2.60"
serde_json = "1.0.51"
anyhow = "1.0.28"
serde = {version="1.0", features=["derive"]}
urlencoding = "1.0.0"

[profile.release]
lto = true
opt-level = 's'